--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,6 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "cors": "^2.8.5",
-    "socket.io": "^4.7.5"
+    "cors": "^2.8.5"
   }
 }
