--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
     "express": "^4.19.2",
@@ -18,6 +19,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "ably": "^2.2.1",
     "cors": "^2.8.5"
   }
 }
