--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"server": "cd .. && cd ./backend && nodemon index.ts",
+		"server": "cd ./backend && nodemon index.ts",
 		"client": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -26,7 +26,6 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"ably": "^2.2.1",
 		"nodemon": "^3.1.4"
 	}
 }
