--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"dayjs": "^1.11.11",
 		"firebase": "^10.12.3",
-		"nodemon": "^3.1.4"
+		"nodemon": "^3.1.4",
+		"sveltefire": "^0.4.5"
 	}
 }
