--- a/example.env
+++ b/example.env
@@ -1,8 +1,7 @@
-API_KEY=
-AUTH_DOMAIN=
-DATABASE_URL=
-PROJECT_ID=
-STORAGE_BUDKET=
-MSG_SENDER_ID=
-APP_ID=
-MEASUREMENT_ID=
+VITE_FIREBASE_API_KEY=your-api-key
+VITE_FIREBASE_AUTH_DOMAIN=your-auth-domain
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-storage-bucket
+VITE_FIREBASE_MESSAGING_SENDER_ID=your-messaging-sender-id
+VITE_FIREBASE_APP_ID=your-app-id
+VITE_FIREBASE_MEASUREMENT_ID=your-measurement-id
