--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
-  "name": "chat-application",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "server": "cd ./backend && nodemon index.ts",
-    "client": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
-  },
-  "devDependencies": {
-    "@iconify/svelte": "^4.0.2",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "autoprefixer": "^10.4.19",
-    "dayjs": "^1.11.11",
-    "firebase": "^10.12.3",
-    "nodemon": "^3.1.4",
-    "postcss": "^8.4.39",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "tailwindcss": "^3.4.4",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "dotenv": "^16.4.5",
-    "sveltefire": "^0.4.5"
-  }
+	"name": "new-svelte-chat-app",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "^3.2.2",
+		"@sveltejs/kit": "^2.5.18",
+		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"svelte": "^4.2.18",
+		"svelte-check": "^3.8.4",
+		"tslib": "^2.6.3",
+		"typescript": "^5.5.3",
+		"vite": "^5.3.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@iconify/svelte": "^4.0.2",
+		"autoprefixer": "^10.4.19",
+		"dayjs": "^1.11.11",
+		"dotenv": "^16.4.5",
+		"firebase": "^9.23.0",
+		"nodemon": "^3.1.4",
+		"postcss": "^8.4.39",
+		"svelte-motion": "^0.12.2",
+		"sveltefire": "^0.4.5",
+		"tailwindcss": "^3.4.4"
+	}
 }
