--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"dayjs": "^1.11.11",
 		"dotenv": "^16.4.5",
 		"firebase": "^9.23.0",
+		"iconify-icon": "^2.1.0",
 		"nodemon": "^3.1.4",
 		"postcss": "^8.4.39",
 		"svelte-motion": "^0.12.2",
