--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
 	"type": "module",
 	"dependencies": {
 		"@iconify/svelte": "^4.0.2",
+		"@svelteuidev/composables": "^0.15.7",
+		"@svelteuidev/core": "^0.15.7",
+		"@svelteuidev/dates": "^0.15.7",
+		"@svelteuidev/motion": "^0.15.7",
+		"@svelteuidev/preprocessors": "^0.15.7",
+		"@svelteuidev/prism": "^0.15.7",
 		"autoprefixer": "^10.4.19",
-		"dayjs": "^1.11.11",
+		"classnames": "^2.5.1",
+		"dayjs": "^1.11.12",
 		"dotenv": "^16.4.5",
 		"firebase": "^9.23.0",
-		"iconify-icon": "^2.1.0",
 		"nodemon": "^3.1.4",
 		"postcss": "^8.4.39",
 		"svelte-motion": "^0.12.2",
