--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"@sveltejs/adapter-auto": "^3.2.2",
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"flowbite": "^2.4.1",
+		"flowbite-svelte": "^0.46.15",
 		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.4",
 		"tslib": "^2.6.3",
@@ -33,6 +35,7 @@
 		"dayjs": "^1.11.12",
 		"dotenv": "^16.4.5",
 		"firebase": "^9.23.0",
+		"flowbite-svelte-icons": "^1.6.1",
 		"nodemon": "^3.1.4",
 		"postcss": "^8.4.39",
 		"svelte-motion": "^0.12.2",
