--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
 		"@sveltejs/adapter-auto": "^3.2.2",
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.1.1",
+		"@types/lodash": "^4.17.7",
+		"@types/uuid": "^10.0.0",
 		"flowbite": "^2.4.1",
 		"flowbite-svelte": "^0.46.15",
 		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.4",
 		"tslib": "^2.6.3",
-		"typescript": "^5.5.3",
+		"typescript": "^5.5.4",
 		"vite": "^5.3.3"
 	},
 	"type": "module",
@@ -36,10 +38,12 @@
 		"dotenv": "^16.4.5",
 		"firebase": "^9.23.0",
 		"flowbite-svelte-icons": "^1.6.1",
+		"lodash": "^4.17.21",
 		"nodemon": "^3.1.4",
 		"postcss": "^8.4.39",
 		"svelte-motion": "^0.12.2",
 		"sveltefire": "^0.4.5",
-		"tailwindcss": "^3.4.4"
+		"tailwindcss": "^3.4.4",
+		"uuid": "^10.0.0"
 	}
 }
