--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
 		"@svelteuidev/motion": "^0.15.7",
 		"@svelteuidev/preprocessors": "^0.15.7",
 		"@svelteuidev/prism": "^0.15.7",
+		"@tanstack/svelte-query": "^5.51.11",
 		"autoprefixer": "^10.4.19",
 		"classnames": "^2.5.1",
 		"dayjs": "^1.11.12",
